<resources>
    <string name="app_name">World Trip Advisor</string>
    <string name="facebook_app_id">319864395633866</string>
    <string name="fb_login_protocol_scheme">fb319864395633866</string>
    <!-- activity_googleprofile.xml -->
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="logout">Logout</string>
    <!-- activity_main.xml -->
    <string name="or">OR</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up2">sign up</string>
    <string name="todo">TODO</string>
    <!-- activity_emailsign.xml -->
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <!-- activity_signuppage.xml -->
    <string name="email_address2">Email Address</string>
    <string name="password2">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in2">Sign in</string>
    <!--navigation.xml-->
    <string name="title_home">Home</string>
    <string name="title_trip">Trip</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>
</resources>
