<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="613dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="345dp"
            android:layout_marginTop="1dp"
            android:background="#ffff"
            app:srcCompat="@drawable/cross" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/wta" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="320dp"
            android:layout_height="53dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@color/mycolor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/or"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@color/mycolor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="39dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background=" #1c9512 "
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/signin2"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:background=" #1c9512 "
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_email" />

            <TextView
                android:id="@+id/signin1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/sign_in_with_email"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor=" #000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/signup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/sign_up2"
                android:textColor="#195b13"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>